--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Web Developer creating a new awesome personal website using Jekyll.
 baseurl: "/portfolio" # the subpath of your site, e.g. /blog
 url: "http://example.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
+skype_username: yon.brooks
 github_username:  Yonald
 linkedin_username: yon-brooks-a7536797
 
