--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Portfolio
+title: yb
 email: nornahh@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Web Developer creating a new awesome personal website using Jekyll.
